--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             color: #ffffff;
         }
 	</STYLE>
-	<TITLE>AmisDex MCC - Crypto Charts</TITLE>
+	<TITLE>Trading Live Charts</TITLE>
 
 	<LINK rel="shortcut icon" type="image/png" href="images/favicon.png">
 	<LINK href="css/main.css?ver=7.3" rel="stylesheet">
@@ -88,8 +88,6 @@
 		</DIV>
 		<BUTTON id="theme-toggle" class="theme" onclick="change_theme()">Browser Incompatible</BUTTON>
 		<BUTTON id="configChart" class="theme" onclick="showMultiConfig()">Javascript Crashed</BUTTON>
-		<BUTTON class="ad" onclick="showAd()">TRADE HERE</BUTTON>
-		<BUTTON class="btn btn-nav right" onclick="showInfo()">DONATE / INFO</BUTTON>
 		<DIV class="modalConfig" style="-webkit-backdrop-filter: blur(6px);">
 			<DIV class="hero" style="overflow-y: auto; max-height: 100vh;">
 				<DIV id="addMultiChart" style="background: #fff9fc; border-radius: 2px;" class="cornflower-box">
